--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bitflags = "2.6.0"
 lazy_static = "1.4.0"
+bitflags = "1.2.1"
+sdl2 = "0.34.0"
+rand = "=0.7.3"
